Fixed getGroups in Rollcall. Updated to 77a3118 commit from Amab
Signed-off-by: Antonio Aguilera <aguilerin@gmail.com>